name:                jivebunny
version:             0.2.1
synopsis:            demultiplexer for Illumina sequencing data
homepage:            https://bitbucket.org/ustenzel/jivebunny
license:             GPL-3
license-file:        LICENSE
author:              Udo Stenzel
maintainer:          udo.stenzel@eva.mpg.de
build-type:          Simple
extra-source-files:  ChangeLog.md
                     man/man1/bcl2bam.1
                     man/man1/fastq2bam.1
cabal-version:       >=1.10
data-files:          index_db.json
data-dir:            data

executable jivebunny
  main-is:             jivebunny.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  c-sources:           cbits/jive.c
  cc-options:          -std=c99 -ffast-math
  ghc-options:         -Wall -rtsopts
  -- ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, TypeFamilies, RecordWildCards
  other-modules:       Index, Paths_jivebunny
  build-depends:       aeson                    >= 0.7 && < 1.3,
                       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       random                   >= 1.0 && < 1.2,
                       text                     >= 1.0 && < 1.3,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   >= 0.11 && < 0.13,
                       vector-algorithms        >= 0.3 && < 0.8,
                       vector-th-unbox          == 0.2.*

executable bcl2bam
  main-is:             bcl2bam.hs
  build-depends:       async                    >= 2.0 && < 2.2,
                       base                     >= 4.6 && < 4.11,
                       biohazard                >= 0.6.15 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       containers               >= 0.4.1 && < 0.6,
                       directory                >= 1.2 && < 1.4,
                       filepath                 >= 1.3 && < 1.5,
                       stm                      == 2.4.*,
                       transformers             >= 0.4.1 && < 0.6,
                       vector                   >= 0.11 && < 0.13,
                       xml                      == 1.3.*,
                       zlib                     == 0.6.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N2
  default-extensions:  NoImplicitPrelude, OverloadedStrings,
                       BangPatterns, RecordWildCards,
                       ForeignFunctionInterface, PatternGuards
  other-modules:       BCL, Locs, Paths_jivebunny
